--- a/problem4_12dynamicsubmit.qmd
+++ b/problem4_12dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 4.11 {.unnumbered}
+# Problem 4.12 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: A circular rod is inserted into a space slightly wider than the rod.](images/213.png){fig-alt="A circular rod is inserted into a space slightly wider than the rod. The radius of the rod is r[1] and the radius of the space is r[2]."}
+![Figure 1: A rectangular rod is pulled in tension in the x-direction.](images/216.png){fig-alt="A rectangular rod is pulled in tension in the x-direction by a load P. The bar deflects by d[1] in the x-direction and d[2] in the y-direction. The length in the x-direction is 5 in, and the length in the y direction is 1 in. "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,11 +25,9 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="213"
-r1=reactive.Value("__")
-r2=reactive.Value("__")
-E=15000
-v=0.33
+problem_ID="216"
+d1=reactive.Value("__")
+d2=reactive.Value("__")
 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
@@ -40,7 +38,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in units of kip", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -53,22 +51,20 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"An aluminum circular rod of radius r<sub>1</sub> = {r1()} in is inserted into space that is slightly wider than the rod, where r<sub>2</sub> = {r2()} in. What load P is needed so that the rod expands and fills the space in the radial direction? Assume E = 15,000 ksi and v = 0.33. ")]
+        return[ui.markdown(f"A rectangular bar is pulled in tension by a load P in the x-direction. The bar deflects by d<sub>1</sub> = {d1()} in and d<sub>2</sub> = {d2()} in, in the x- and y-direction, respectively. The length in the x-direction is 5 in, and the length in the y direction is 1 in. What is the Poisson's Ratio of the material? The z-direction deflection is not known. ")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        r1.set(random.randrange(10, 50, 1)/10)
-        r2.set((r1() + (.002-0.2))*.001)
+        d1.set(random.randrange(20, 50, 1)/1000)
+        d2.set(random.randrange(10, 20, 1)/10000)
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        Ex = (r1() - r2())/r1()
-        sigmay = (Ex*E)/(-v)
-        instr= sigmay*math.pi*r1()**2
+        instr= -(-d2()/1)/(d1()/5)
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
