--- a/problem6_31dynamicsubmit.qmd
+++ b/problem6_31dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 4.12 {.unnumbered}
+# Problem 6.31 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: A rectangular rod is pulled in tension in the x-direction.](images/216.png){fig-alt="A rectangular rod is pulled in tension in the x-direction by a load P. The bar deflects by d[1] in the x-direction and d[2] in the y-direction. The length in the x-direction is 5 in, and the length in the y direction is 1 in. "}
+![Figure 1: Two steel circular rods are firmly welded together and attached between two walls. ](images/293.png){fig-alt="Two steel circular rods are firmly welded together and attached between two walls. The rod on the left has a diameter d1 and the rod on the right has a diameter d2. Each rod has length L. The torque is applied where the rods intersect  "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,9 +25,12 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="216"
+problem_ID="293"
+T=reactive.Value("__")
 d1=reactive.Value("__")
 d2=reactive.Value("__")
+L=reactive.Value("__")
+G = 80
 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
@@ -38,7 +41,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of MPa", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -51,20 +54,27 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A rectangular bar is pulled in tension by a load P in the x-direction. The bar deflects by d<sub>1</sub> = {d1()} in and d<sub>2</sub> = {d2()} in, in the x- and y-direction, respectively. The length in the x-direction is 5 in, and the length in the y direction is 1 in. What is the Poisson's Ratio of the material? The z-direction deflection is not known. ")]
+        return[ui.markdown(f"Two steel (G = 80 GPa) circular rods are firmly welded together and attached between two walls. Assume d<sub>1</sub> = {d1()} mm, d<sub>2</sub> = {d2()} mm, and L  = {L()} mm. A torque T = {T()} N-m is applied at the welded joint as shown. What is the highest stress in either rod?")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        d1.set(random.randrange(10, 50, 1)/1000)
-        d2.set(random.randrange(10, 50, 1)/10000)
+        d1.set(random.randrange(20, 50, 1))
+        d2.set(round(d1()*.8, 2))
+        L.set(random.randrange(100, 800, 10))
+        T.set(random.randrange(10, 300, 5))
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        instr= -(-d2()/1)/(d1()/5)
+        J1 = (math.pi/2)*(d1()/2000)**4
+        J2 = (math.pi/2)*(d2()/2000)**4
+        RHS = J1/J2
+        Tb = (T()/(RHS+1))
+        Ta = T() - Tb
+        instr= ((Tb*d1()/2000)/J1)/1000
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
