--- a/problem7_2dynamicsubmit.qmd
+++ b/problem7_2dynamicsubmit.qmd
@@ -1,11 +1,11 @@
-# Problem 4.24 {.unnumbered}
+# Problem 7.2 {.unnumbered}
 
 This is a dynamic rendering of the problem with dynamic variables based on the username entered. 
 
 
 ## Problem Image
 
-![Figure 1: A strain gauge is placed on a test sample and a vertical load is applied to the test sample. ](images/205.png){fig-alt="A strain gauge is placed on a test sample and a vertical load is applied to the test sample. The sides of the length in the x direction of the sample is 4 in, in the y direction it is 3 in, and it is 1 in in the z direction."}
+![Figure 1: A beam is subjected to a triangular load as shown. ](images/306.png){fig-alt="A beam is subjected to a triangular load, w. Point A is attached to the wall and point C is free. Point B is halfway between A and C with distances L. Section a-a is at distance x from point A. "}
 
 ```{shinylive-python}
 #| standalone: true
@@ -25,12 +25,10 @@ def generate_random_letters(length):
     # Generate a random string of letters of specified length
     return ''.join(random.choice(string.ascii_lowercase) for _ in range(length)) 
 
-problem_ID="205"
-P1=reactive.Value("__")
-E=reactive.Value("__")
-v=reactive.Value("__")
-SG=reactive.Value("__")
-
+problem_ID="306"
+w=reactive.Value("__")
+L=reactive.Value("__")
+x=reactive.Value("__")
 
 
 attempts=["Timestamp,Attempt,Answer,Feedback\n"]
@@ -41,7 +39,7 @@ app_ui = ui.page_fluid(
     ui.input_action_button("generate_problem", "Generate Problem", class_="btn-primary"),
     ui.markdown("**Problem Statement**"),
     ui.output_ui("ui_problem_statement"),
-    ui.input_text("answer","Your Answer in percent", placeholder="Please enter your answer"),
+    ui.input_text("answer","Your Answer in units of kN-m", placeholder="Please enter your answer"),
     ui.input_action_button("submit", "Submit Answer", class_="btn-primary"),
     ui.download_button("download", "Download File to Submit", class_="btn-success"),
 )
@@ -54,24 +52,22 @@ def server(input, output, session):
     @output
     @render.ui
     def ui_problem_statement():
-        return[ui.markdown(f"A strain gauge is placed on a polymer test sample with an elastic modulus E =  {E()} x 10<sup>6</sup> psi and a Poisson's ratio of v = {v()}. When a P<sub>1</sub> = {P1()} kip vertical load is applied to the test sample, the strain gauge reads a strain of SG = {SG()} x 10<sup>-6</sup> in the x-direction. What is the relative error of the strain gauge compared to the theoretical strain of the test sample? Note: relative error is defined to be the difference between the measured value and the theoretical value divided by the theoretical value ")]
+        return[ui.markdown(f"A beam is subjected to the loading shown, where w = {w()} kN/m and L = {L()} m. What is the internal bending moment at section a-a at x = {x()} m?")]
     
     @reactive.Effect
     @reactive.event(input.generate_problem)
     def randomize_vars():
         random.seed(input.ID())
-        P1.set(random.randrange(20, 200, 1)/10)
-        E.set(random.randrange(5, 20, 1))
-        v.set(random.randrange(20, 40, 1)/100)
-        SG.set(round((v()*P1()*1000)/(12*E())-(0.3-2)*0.1, 2))
+        w.set(random.randrange(20, 200, 1)/20)
+        L.set(random.randrange(20, 50, 2)/10)
+        x.set(L()/2)
         
     @reactive.Effect
     @reactive.event(input.submit)
     def _():
         attempt_counter.set(attempt_counter() + 1)  # Increment the attempt counter on each submission.
-        sigmaz = (-P1()*1000)/(4*3)
-        Ex = ((-v()*(sigmaz))/(E()*10**6))
-        instr=  ((Ex - SG()*10**-6)/Ex)*100
+        
+        instr= -.5*L()*(w()/2)*x()-(2/3)*L()*(w()/2)*x()*.5-(1+2/3)*L()*w()*0.5
         if math.isclose(float(input.answer()), instr, rel_tol=0.001):
             check = "*Correct*"
             correct_indicator = "JL"
@@ -117,5 +113,4 @@ def server(input, output, session):
 
 # App installation
 app = App(app_ui, server)
-
 ```
