--- a/index.tex
+++ b/index.tex
@@ -1470,7 +1470,8 @@ rivets}
 
 \markboth{Problem 2.38}{Problem 2.38}
 
-This is a static rendering of the problem.
+This is a dynamic rendering of the problem with dynamic variables based
+on the username entered.
 
 \section*{Problem Image}\label{problem-image-9}
 \addcontentsline{toc}{section}{Problem Image}
@@ -1486,6 +1487,114 @@ This is a static rendering of the problem.
 \caption{Figure 1: A crate is hanged on a circular solid metal rod.}
 
 \end{figure}%
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#| standalone: true}
+\NormalTok{\#| viewerHeight: 600}
+\NormalTok{\#| components: [viewer]}
+\NormalTok{from shiny import App, render, ui, reactive}
+\NormalTok{import random}
+\NormalTok{import asyncio}
+\NormalTok{import io}
+\NormalTok{import math}
+\NormalTok{import string}
+\NormalTok{from datetime import datetime}
+\NormalTok{from pathlib import Path}
+
+\NormalTok{def generate\_random\_letters(length):}
+\NormalTok{    \# Generate a random string of letters of specified length}
+\NormalTok{    return \textquotesingle{}\textquotesingle{}.join(random.choice(string.ascii\_lowercase) for \_ in range(length))}
+
+\NormalTok{problem\_ID="166"}
+\NormalTok{W=reactive.Value("\_\_")}
+\NormalTok{d1=reactive.Value("\_\_")}
+\NormalTok{d2=reactive.Value("\_\_")}
+\NormalTok{t=reactive.Value("\_\_")}
+\NormalTok{attempts=["Timestamp,Attempt,Answer,Feedback\textbackslash{}n"]}
+
+\NormalTok{app\_ui = ui.page\_fluid(}
+\NormalTok{    ui.markdown("**Please enter your ID number from your instructor and click to generate your problem**"),}
+\NormalTok{    ui.input\_text("ID","", placeholder="Enter ID Number Here"),}
+\NormalTok{    ui.input\_action\_button("generate\_problem", "Generate Problem", class\_="btn{-}primary"),}
+\NormalTok{    ui.markdown("**Problem Statement**"),}
+\NormalTok{    ui.output\_ui("ui\_problem\_statement"),}
+\NormalTok{    ui.input\_text("answer","Your Answer in units of ksi", placeholder="Please enter your answer"),}
+\NormalTok{    ui.input\_action\_button("submit", "Submit Answer", class\_="btn{-}primary"),}
+\NormalTok{    ui.download\_button("download", "Download File to Submit", class\_="btn{-}success"),}
+\NormalTok{)}
+
+
+\NormalTok{def server(input, output, session):}
+\NormalTok{    \# Initialize a counter for attempts}
+\NormalTok{    attempt\_counter = reactive.Value(0)}
+    
+\NormalTok{    @output}
+\NormalTok{    @render.ui}
+\NormalTok{    def ui\_problem\_statement():}
+\NormalTok{        return[ui.markdown(f"A crate of weight \{W()\} = lb hangs from a solid circular metal rod of diameter \{d1()\} = in.. The cable is wrapped around a support collar of diameter \{d2()\} = in. and thickness \{t()\} = in. to evenly distribute the cable load. What is the bearing stress on the support collar due to the rod? ")]}
+    
+\NormalTok{    @reactive.Effect}
+\NormalTok{    @reactive.event(input.generate\_problem)}
+\NormalTok{    def randomize\_vars():}
+\NormalTok{        random.seed(input.ID())}
+\NormalTok{        W.set(random.randrange(4000, 9000, 100))}
+\NormalTok{        d1.set(random.randrange(5, 30, 1)/10)}
+\NormalTok{        d2.set(d1()*3)}
+\NormalTok{        t.set(d1()*2)}
+\NormalTok{    @reactive.Effect}
+\NormalTok{    @reactive.event(input.submit)}
+\NormalTok{    def \_():}
+        
+\NormalTok{        instr= W()/(d1()*t()*1000)}
+        
+\NormalTok{        if math.isclose(float(input.answer()), instr, abs\_tol=0.001):}
+\NormalTok{            check = "*Correct*"}
+\NormalTok{            correct\_indicator = "JL"}
+\NormalTok{        else:}
+\NormalTok{            check = "*Not Correct.*"}
+\NormalTok{            correct\_indicator = "JG"}
+
+\NormalTok{        \# Generate random parts for the encoded attempt.}
+\NormalTok{        random\_start = generate\_random\_letters(4)}
+\NormalTok{        random\_middle = generate\_random\_letters(4)}
+\NormalTok{        random\_end = generate\_random\_letters(4)}
+\NormalTok{        encoded\_attempt = f"\{random\_start\}\{problem\_ID\}{-}\{random\_middle\}\{attempt\_counter()\}\{correct\_indicator\}{-}\{random\_end\}\{input.ID()\}"}
+
+\NormalTok{        \# Store the most recent encoded attempt in a reactive value so it persists across submissions}
+\NormalTok{        session.encoded\_attempt = reactive.Value(encoded\_attempt)}
+
+\NormalTok{        \# Append the attempt data to the attempts list without the encoded attempt}
+\NormalTok{        attempts.append(f"\{datetime.now()\}, \{attempt\_counter()\}, \{input.answer()\}, \{check\}\textbackslash{}n")}
+
+\NormalTok{        \# Show feedback to the user.}
+\NormalTok{        feedback = ui.markdown(f"Your answer of \{input.answer()\} is \{check\}. For reference in debugging this, the calculated instructor answer is \{instr\}")}
+\NormalTok{        m = ui.modal(}
+\NormalTok{            feedback,}
+\NormalTok{            title="Feedback",}
+\NormalTok{            easy\_close=True}
+\NormalTok{        )}
+\NormalTok{        ui.modal\_show(m)}
+
+\NormalTok{    @session.download(filename=lambda: f"Problem\_Log{-}\{problem\_ID\}{-}\{input.ID()\}.csv")}
+\NormalTok{    async def download():}
+\NormalTok{        \# Start the CSV with the encoded attempt (without label)}
+\NormalTok{        final\_encoded = session.encoded\_attempt() if session.encoded\_attempt is not None else "No attempts"}
+\NormalTok{        yield f"\{final\_encoded\}\textbackslash{}n\textbackslash{}n"}
+        
+\NormalTok{        \# Write the header for the remaining CSV data once}
+\NormalTok{        yield "Timestamp,Attempt,Answer,Feedback\textbackslash{}n"}
+        
+\NormalTok{        \# Write the attempts data, ensure that the header from the attempts list is not written again}
+\NormalTok{        for attempt in attempts[1:]:  \# Skip the first element which is the header}
+\NormalTok{            await asyncio.sleep(0.25)  \# This delay may not be necessary; adjust as needed}
+\NormalTok{            yield attempt}
+
+
+\NormalTok{\# App installation}
+\NormalTok{app = App(app\_ui, server)}
+\end{Highlighting}
+\end{Shaded}
 
 \part{List of Complete Problems - Static Version}
 
@@ -1781,10 +1890,10 @@ rivets}
 
 \end{figure}%
 
-\chapter*{Problem 2.37}\label{problem-2.37}
-\addcontentsline{toc}{chapter}{Problem 2.37}
+\chapter*{Problem 2.38}\label{problem-2.38-1}
+\addcontentsline{toc}{chapter}{Problem 2.38}
 
-\markboth{Problem 2.37}{Problem 2.37}
+\markboth{Problem 2.38}{Problem 2.38}
 
 This is a static rendering of the problem.
 
@@ -4120,12 +4229,13 @@ on a circular rod.}
 \end{Highlighting}
 \end{Shaded}
 
-\chapter*{Problem 2.38}\label{problem-2.38-1}
+\chapter*{Problem 2.38}\label{problem-2.38-2}
 \addcontentsline{toc}{chapter}{Problem 2.38}
 
 \markboth{Problem 2.38}{Problem 2.38}
 
-This is a static rendering of the problem.
+This is a dynamic rendering of the problem with dynamic variables based
+on the username entered.
 
 \section*{Problem Image}\label{problem-image-27}
 \addcontentsline{toc}{section}{Problem Image}
@@ -4141,6 +4251,114 @@ This is a static rendering of the problem.
 \caption{Figure 1: A crate is hanged on a circular solid metal rod.}
 
 \end{figure}%
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{\#| standalone: true}
+\NormalTok{\#| viewerHeight: 600}
+\NormalTok{\#| components: [viewer]}
+\NormalTok{from shiny import App, render, ui, reactive}
+\NormalTok{import random}
+\NormalTok{import asyncio}
+\NormalTok{import io}
+\NormalTok{import math}
+\NormalTok{import string}
+\NormalTok{from datetime import datetime}
+\NormalTok{from pathlib import Path}
+
+\NormalTok{def generate\_random\_letters(length):}
+\NormalTok{    \# Generate a random string of letters of specified length}
+\NormalTok{    return \textquotesingle{}\textquotesingle{}.join(random.choice(string.ascii\_lowercase) for \_ in range(length))}
+
+\NormalTok{problem\_ID="166"}
+\NormalTok{W=reactive.Value("\_\_")}
+\NormalTok{d1=reactive.Value("\_\_")}
+\NormalTok{d2=reactive.Value("\_\_")}
+\NormalTok{t=reactive.Value("\_\_")}
+\NormalTok{attempts=["Timestamp,Attempt,Answer,Feedback\textbackslash{}n"]}
+
+\NormalTok{app\_ui = ui.page\_fluid(}
+\NormalTok{    ui.markdown("**Please enter your ID number from your instructor and click to generate your problem**"),}
+\NormalTok{    ui.input\_text("ID","", placeholder="Enter ID Number Here"),}
+\NormalTok{    ui.input\_action\_button("generate\_problem", "Generate Problem", class\_="btn{-}primary"),}
+\NormalTok{    ui.markdown("**Problem Statement**"),}
+\NormalTok{    ui.output\_ui("ui\_problem\_statement"),}
+\NormalTok{    ui.input\_text("answer","Your Answer in units of ksi", placeholder="Please enter your answer"),}
+\NormalTok{    ui.input\_action\_button("submit", "Submit Answer", class\_="btn{-}primary"),}
+\NormalTok{    ui.download\_button("download", "Download File to Submit", class\_="btn{-}success"),}
+\NormalTok{)}
+
+
+\NormalTok{def server(input, output, session):}
+\NormalTok{    \# Initialize a counter for attempts}
+\NormalTok{    attempt\_counter = reactive.Value(0)}
+    
+\NormalTok{    @output}
+\NormalTok{    @render.ui}
+\NormalTok{    def ui\_problem\_statement():}
+\NormalTok{        return[ui.markdown(f"A crate of weight \{W()\} = lb hangs from a solid circular metal rod of diameter \{d1()\} = in.. The cable is wrapped around a support collar of diameter \{d2()\} = in. and thickness \{t()\} = in. to evenly distribute the cable load. What is the bearing stress on the support collar due to the rod? ")]}
+    
+\NormalTok{    @reactive.Effect}
+\NormalTok{    @reactive.event(input.generate\_problem)}
+\NormalTok{    def randomize\_vars():}
+\NormalTok{        random.seed(input.ID())}
+\NormalTok{        W.set(random.randrange(4000, 9000, 100))}
+\NormalTok{        d1.set(random.randrange(5, 30, 1)/10)}
+\NormalTok{        d2.set(d1()*3)}
+\NormalTok{        t.set(d1()*2)}
+\NormalTok{    @reactive.Effect}
+\NormalTok{    @reactive.event(input.submit)}
+\NormalTok{    def \_():}
+        
+\NormalTok{        instr= W()/(d1()*t()*1000)}
+        
+\NormalTok{        if math.isclose(float(input.answer()), instr, abs\_tol=0.001):}
+\NormalTok{            check = "*Correct*"}
+\NormalTok{            correct\_indicator = "JL"}
+\NormalTok{        else:}
+\NormalTok{            check = "*Not Correct.*"}
+\NormalTok{            correct\_indicator = "JG"}
+
+\NormalTok{        \# Generate random parts for the encoded attempt.}
+\NormalTok{        random\_start = generate\_random\_letters(4)}
+\NormalTok{        random\_middle = generate\_random\_letters(4)}
+\NormalTok{        random\_end = generate\_random\_letters(4)}
+\NormalTok{        encoded\_attempt = f"\{random\_start\}\{problem\_ID\}{-}\{random\_middle\}\{attempt\_counter()\}\{correct\_indicator\}{-}\{random\_end\}\{input.ID()\}"}
+
+\NormalTok{        \# Store the most recent encoded attempt in a reactive value so it persists across submissions}
+\NormalTok{        session.encoded\_attempt = reactive.Value(encoded\_attempt)}
+
+\NormalTok{        \# Append the attempt data to the attempts list without the encoded attempt}
+\NormalTok{        attempts.append(f"\{datetime.now()\}, \{attempt\_counter()\}, \{input.answer()\}, \{check\}\textbackslash{}n")}
+
+\NormalTok{        \# Show feedback to the user.}
+\NormalTok{        feedback = ui.markdown(f"Your answer of \{input.answer()\} is \{check\}. For reference in debugging this, the calculated instructor answer is \{instr\}")}
+\NormalTok{        m = ui.modal(}
+\NormalTok{            feedback,}
+\NormalTok{            title="Feedback",}
+\NormalTok{            easy\_close=True}
+\NormalTok{        )}
+\NormalTok{        ui.modal\_show(m)}
+
+\NormalTok{    @session.download(filename=lambda: f"Problem\_Log{-}\{problem\_ID\}{-}\{input.ID()\}.csv")}
+\NormalTok{    async def download():}
+\NormalTok{        \# Start the CSV with the encoded attempt (without label)}
+\NormalTok{        final\_encoded = session.encoded\_attempt() if session.encoded\_attempt is not None else "No attempts"}
+\NormalTok{        yield f"\{final\_encoded\}\textbackslash{}n\textbackslash{}n"}
+        
+\NormalTok{        \# Write the header for the remaining CSV data once}
+\NormalTok{        yield "Timestamp,Attempt,Answer,Feedback\textbackslash{}n"}
+        
+\NormalTok{        \# Write the attempts data, ensure that the header from the attempts list is not written again}
+\NormalTok{        for attempt in attempts[1:]:  \# Skip the first element which is the header}
+\NormalTok{            await asyncio.sleep(0.25)  \# This delay may not be necessary; adjust as needed}
+\NormalTok{            yield attempt}
+
+
+\NormalTok{\# App installation}
+\NormalTok{app = App(app\_ui, server)}
+\end{Highlighting}
+\end{Shaded}
 
 \chapter*{Problem 2.39}\label{problem-2.39}
 \addcontentsline{toc}{chapter}{Problem 2.39}
